# brgy-tindahan-tracker

./: .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  database.py
app/controllers/: __init__.py  store_controller.py
app/models/: __init__.py  compliance_report.py  inspection.py  store.py
app/routes/: __init__.py  api_routes.py  web_routes.py
app/templates/: base.html  index.html  inspections.html  inventory.html  products.html  reports.html  sales.html  stores.html  tindahan.html  violations.html
app/utils/: __init__.py  helpers.py
