[tool.poetry]
name = "brgy-tindahan-tracker"
version = "0.1.0"
description = "Barangay Tindahan Tracker - A FastAPI MVC application for tracking local store inventory and sales"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
aiosqlite = "^0.19.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
alembic = "^1.13.1"
sqlmodel = "^0.0.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
